# roster-mapper

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  README.md  ROSTER DEC HAN 17122025.pdf_mapped.xlsx  alembic.ini  cloudbuild.yaml  docker-compose.yml  mapping_code.xlsx  pyproject.toml  requirements.txt
.github/workflows/: ci-dockerhub.yml  cloudrun-deploy.yml
alembic/: env.py
alembic/versions/: .gitkeep
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  logging.py
app/db/: __init__.py  connector.py  database.py  models.py
app/services/: __init__.py  compdf_service.py  excel_processor.py  local_storage.py  mapper.py  pdf_processor.py  storage.py
app/ui/: __init__.py  routes.py
app/utils/: __init__.py  xls_converter.py
docker/: Dockerfile  Dockerfile.cloudrun
docs/: API_BATCH.md  API_SPEC.md  API_STATUS_CHECK.md  BACKLOG.md  BAO_CAO_TIEN_DO.md  BLUEPRINT.md  CONTEXT_SESSION.md  CONTRACT.md  DEPLOY.md  DEPLOY_CLOUDRUN.md  FILE_LIFECYCLE.md  GATES.md  IMPLEMENTATION_SUMMARY.md  INTAKE.md  NO_DB_DEPLOYMENT.md  PHASE2_UPGRADE.md  TEST_CHECKLIST.md  TEST_LOCAL_NO_DB.md  UI_FLOW.md  UI_SPEC.md
mappings/CXR/: 20251216_033750.json  latest.json
scripts/: README.md  quick_test.bat  quick_test.sh  test_download.py  test_no_db_api.py
templates/: admin.html  base.html  dashboard.html  index.html  preview.html  results.html  select_sheets.html  upload.html  upload_pdf.html
tests/: __init__.py  conftest.py  test_batch_processing.py  test_dashboard_queries.py  test_mapper.py  test_multi_station.py  test_ui_routes.py
(+23 files in other folders)
