[project]
name = "roster-mapper"
version = "1.0.2"
description = "Vietjet Maintenance Department - Excel Roster Code Mapping Service"
authors = [
    {name = "Dat Nguyen Tien", email = "datnguyentien@vietjetair.com"}
]
requires-python = ">=3.11"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = [".venv", "__pycache__"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]
exclude = [".venv", "__pycache__", "migrations"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [".venv", "__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

